--- a/app/src/main/res/layout/activity_keybroad.xml
+++ b/app/src/main/res/layout/activity_keybroad.xml
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:text="没有动作" />
 
-            <EditText
+            <com.aiitec.widgets.DeleteEditText
                 android:id="@+id/et_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
